Fix URL bar adjustment under root-layer-scrolls

When an element is position: fixed to the bottom of the screen, hiding
the URL bar produces a transform in the compositor so that the Element
appears to stay fixed to the viewport bottom. This is because, as the
URL bar is hidden, the viewport height is expanded. However, this
expansion happens entirely in the compositor. Until the user releases
their finger, Blink will not get a resize so the Element won't get be
repositioned with the updated viewport height.

With root-layer-scrolling, the root scroller becomes the root
PaintLayer. We previously carved out exceptions for the root layer since
its scrolling was delegated to special "frame scrolling" layers in the
compositor. This patch removes these exceptions and marks the
LayoutView's scrolling layer as being a "position fixed container" so
that position: fixed Elements use it as their container. It also marks
this layer as being affected by URL bar resizes so that we apply the
above-mentioned URl bar transform.

Bug: 798434
Cq-Include-Trybots: master.tryserver.blink:linux_trusty_blink_rel;master.tryserver.chromium.linux:linux_layout_tests_slimming_paint_v2
Change-Id: I69623c619471ced826aa61340d946a0eeb0110ae
Reviewed-on: https://chromium-review.googlesource.com/847458
Reviewed-by: Steve Kobes <skobes@chromium.org>
Commit-Queue: David Bokan <bokan@chromium.org>
Cr-Commit-Position: refs/heads/master@{#526612}
Former-commit-id: 91418fce4d985330002fc38c39815dec3835ed51