third_party/WebKit/Source/core/frame/SettingsDelegate.h
@@ -54,6 +54,7 @@ class CORE_EXPORT SettingsDelegate {
     kStyleChange,
     kViewportDescriptionChange,
     kViewportRuleChange,
+    kViewportScrollbarChange,
     kDNSPrefetchingChange,
     kImageLoadingChange,
     kTextAutosizingChange,
